# international-spy-agency

./: Makefile  README.md  docker-compose.yml
api/: .env.dev  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
api/.scripts/: entrypoint.sh
api/app/: serializers.py  settings.py  urls.py  views.py
api/db/: Dockerfile  create.sql
api/hitmen/: apps.py  asgi.py  managers.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
api/hitmen/fixtures/: users.json
api/hitmen/migrations/: 0001_initial.py  0002_auto_20210225_0425.py
api/hits/: models.py  serializers.py  urls.py  views.py
api/hits/migrations/: 0001_initial.py  0002_remove_hit_assigned_to.py  0003_hit_description.py
api/me/: urls.py  views.py
webapp/: .env  Dockerfile  package-lock.json  package.json  tsconfig.paths.json
webapp/conf/: nginx.conf
webapp/src/: App.tsx  global.d.ts  index.tsx
webapp/src/components/Footer/: Footer.styles.tsx  Footer.tsx
webapp/src/components/FormSelect/: FormSelect.d.ts  FormSelect.tsx  index.tsx
webapp/src/components/FormTextInput/: FormTextInput.d.ts  FormTextInput.tsx
webapp/src/components/FormTextSelect/: FormTextSelect.d.ts  FormTextSelect.tsx  index.tsx
webapp/src/components/Header/: Header.styles.tsx  Header.tsx
webapp/src/components/Layout/: Layout.d.ts  Layout.styles.tsx  Layout.tsx
webapp/src/components/Nav/: Nav.styles.tsx  Nav.tsx
webapp/src/contexts/AuthContext/: AuthContext.d.ts  AuthContext.tsx  AuthReducer.ts  index.ts  useAuthContext.tsx
webapp/src/utils/: localStorage.ts
webapp/src/views/: Router.tsx
(+26 files in other folders)
